k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: snack-rating
spec:
  selector: { app: snack-rating }
  ports:
    - port: 80
      targetPort: 80 # Thruster's listen port — see Dockerfile CMD
